--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -9,7 +9,7 @@
     <meta name="description" content="医会宝 | 让运营更简单"/>
     <meta name="author" content=""/>
 
-    <title>万怡 | 医会宝运营系统</title>
+    <title>万怡 | 医会宝运营系统</title>∑
 
     <!-- Bootstrap Core CSS -->
     <link href="index/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -277,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; favorites 2017
+                        Copyright &copy; WanYi 2017
                     </div>
                 </div>
             </div>
@@ -290,7 +290,7 @@
             <i class="fa fa-chevron-up"></i>
         </a>
     </div>
-<!-- 
+<!--
     Portfolio Modals  delete
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -515,11 +515,12 @@
         </div>
     </div> -->
 
+
     <!-- jQuery -->
-    <script src="index/vendor/jquery/jquery.min.js"></script>
+    <script th:src="@{vendor/webjar/jquery.min.js}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="index/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script th:src="@{vendor/bootstrap/dist/js/bootstrap.min.js}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
@@ -532,7 +533,7 @@
     <script src="index/js/freelancer.min.js"></script>
    	<div style="display:none">
    	  <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260466344'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260466344' type='text/javascript'%3E%3C/script%3E"));</script>
-    </div> 
+    </div>
 </body>
 
 </html>
