--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -86,8 +86,11 @@
         var loginPage = new Vue({
             el: '#loginPage',
             data: {
-                'name': '',
-                'password': ''
+//                'name': '',
+//                'password': ''
+                //测试用
+                'name': 'haha',
+                'password': '123'
             },
             methods: {
             	login: function(event){
