--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -3,19 +3,19 @@
 <body >
 	<aside class="offsidebar" th:fragment="sidebar" >
 	   <h3 class="text-center">设置</h3>
-	   <div class="p-lg text-center">
-	      <a class="btn btn-default btn-block" data-target="#modal-defaultFav" data-toggle="modal" href="javascript:void(0);" id="defaultFavorites"> 
-	      </a>
-	   </div>
-	   <div class="p-lg text-center">
-	      <a class="btn btn-default btn-block" href="javascript:void(0);" id="defaultCollectType" onclick="changeConfig('defaultCollectType')"> 
-	      </a>
-	   </div>
-	   <!--<input type="hidden" id="configId" th:value="${config.id}"/>-->
-	   <div class="p-lg text-center">
-	      <a class="btn btn-default btn-block" href="javascript:void(0);" id="defaultModel" onclick="changeConfig('defaultModel')">
-	      </a>
-	   </div>
+	   <!--<div class="p-lg text-center">-->
+	      <!--<a class="btn btn-default btn-block" data-target="#modal-defaultFav" data-toggle="modal" href="javascript:void(0);" id="defaultFavorites"> -->
+	      <!--</a>-->
+	   <!--</div>-->
+	   <!--<div class="p-lg text-center">-->
+	      <!--<a class="btn btn-default btn-block" href="javascript:void(0);" id="defaultCollectType" onclick="changeConfig('defaultCollectType')"> -->
+	      <!--</a>-->
+	   <!--</div>-->
+	   <!--&lt;!&ndash;<input type="hidden" id="configId" th:value="${config.id}"/>&ndash;&gt;-->
+	   <!--<div class="p-lg text-center">-->
+	      <!--<a class="btn btn-default btn-block" href="javascript:void(0);" id="defaultModel" onclick="changeConfig('defaultModel')">-->
+	      <!--</a>-->
+	   <!--</div>-->
 	   <div class="p-lg text-center">
 	      <a class="btn btn-default btn-block" data-target="#modal-changeDescription" data-toggle="modal" href="javascript:void(0);">
 	         <strong>修改个人简介</strong>
