--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org" >
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.w3.org/1999/xhtml">
 <head th:include="layout :: htmlhead" th:with="title='favorites'"></head>
 <body>
       <section>
