--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -1,5 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:include="layout :: htmlhead" th:with="title='favorites'"></head>
+<head th:include="layout :: htmlhead" th:with="title='favorites'">
+
+
+</head>
 <body>
 <section>
     <div class="content-wrapper">
@@ -12,11 +15,12 @@
             <th>用户名(或昵称)</th>
             <th>标题</th>
             <th>内容</th>
+            <!--<th>图片test</th>-->
+            <th>图片</th>
             <th>发布时间</th>
             <th>评论数</th>
             <th>点赞数</th>
             <th>是否热门</th>
-            <th>图片</th>
         </tr>
        </thead>
        <tbody>
@@ -25,27 +29,109 @@
             <td th:text="${blog.name == null ? blog.nickName:blog.name}"></td>
             <td th:text="${blog.title}" style="word-break: break-all"></td>
             <td th:text="${blog.content}" style="word-break: break-all"></td>
+            <!--<td>-->
+            <!--<table class="table table-condensed">&lt;!&ndash;th:if="${not #lists.isEmpty(${blog.blogImages})}}"&ndash;&gt;-->
+            <!--<tr th:each="images, imageStatus:${blog.blogImages}">&lt;!&ndash;th:each="images:${blog.blogImages}"&ndash;&gt;-->
+            <!--<td>-->
+            <!--<a href="${images}" class="thumbnail">-->
+            <!--<div class="gallery cf">-->
+            <!--<div>-->
+            <!--<img style="width:30px;height:30px;" alt="" class="img-thumbnail" th:src="${images == null?'img/logo.jpg':images}"/>-->
+            <!--</div>-->
+            <!--</div>-->
+
+            <!--</a>-->
+            <!--</td>-->
+            <!--</tr>-->
+            <!--</table>-->
+            <!--</td>-->
+            <td>
+                <table>
+                    <div class="gallery cf" th:each="images, imageStatus:${blog.blogImages}">
+                        <div>
+                            <img style="width:30px;height:30px;" class="img-thumbnail" th:src="${images == null?'img/logo.jpg':images}"/>
+                        </div>
+                    </div>
+                </table>
+            </td>
             <!--时间格式化-->
             <td th:text="${#calendars.format(blog.createdAt,'yyyy/MM/dd HH:mm')}" style="white-space: nowrap"></td>
             <td th:text="${blog.commentCount}"></td>
             <td th:text="${blog.likeCount}"></td>
             <td th:text="${blog.isHot}"></td>
-            <td>
-                <table><!--th:if="${not #lists.isEmpty(${blog.blogImages})}}"-->
-                    <tr th:each="images, imageStatus:${blog.blogImages}"><!--th:each="images:${blog.blogImages}"-->
-                        <td>
-                            <a href="#" class="thumbnail">
-                                <img style="width:30px;height：30px" alt="" class="img-thumbnail" th:src="${images == null?'img/logo.png':images}"/>
-                            </a>
-                        </td>
-                    </tr>
-                </table>
-            </td>
+
         </tr>
       </tbody>
     </table>
+
+
+
 </section>
+<div class="gallery cf">
+    <div>
+        <img src="img/logo.jpg" />
+    </div>
+    <div>
+        <img src="img/logo.jpg" />
+    </div>
+    <div>
+        <img src="img/logo.jpg" />
+    </div>
+    <div>
+        <img src="img/logo.jpg" />
+    </div>
+    <div>
+        <img src="img/logo.jpg" />
+    </div>
+    <div>
+        <img src="img/logo.jpg" />
+    </div>
+</div>
 </body>
 <script type='text/javascript'>
+
 </script>
+<style>
+    .gallery {
+        /*width: 30px;*/
+        margin: 10px auto;
+        /*padding: 5px;*/
+        /*background: #333;*/
+    }
+
+    .gallery > div {
+        position: relative;
+        float: left;
+        padding: 1px;
+    }
+
+    .gallery > div > img {
+        width: 250px;
+        transition: .1s transform;
+        transform: translateZ(0);
+        /* hack */
+    }
+
+    .gallery > div:hover {
+        z-index: 1;
+    }
+
+    .gallery > div:hover > img {
+        transform: scale(15, 15);
+        transition: .3s transform;
+    }
+
+    .cf:before, .cf:after {
+        display: table;
+        content: "";
+        line-height: 0;
+    }
+
+    .cf:after {
+        clear: both;
+    }
+
+
+</style>
+
 </html>
