--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -74,12 +74,12 @@
                         </a>
                      </li>
                      <li id="newWeibos" class=" ">
-                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list')">
+                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/recommend')">
                            <span>—  推荐微博</span>
                         </a>
                      </li>
                      <li id="newWeibos" class=" ">
-                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list')">
+                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
                            <span>—  大咖说</span>
                         </a>
                      </li>
