待认证、已认证用户管理页面

--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -44,12 +44,12 @@
                         </a>
                      </li>
                      <li id="newFavortes" class=" ">
-                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/tool','tool')">
+                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/wait')">
                            <span>—  待认证用户</span>
                         </a>
                      </li>
                      <li id="newFavortes" class=" ">
-                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/mobile','mobile')">
+                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/authen')">
                            <span>—  认证用户</span>
                         </a>
                      </li>
