--- a/src/main/resources/templates/blog/vipblog.html
+++ b/src/main/resources/templates/blog/vipblog.html
@@ -26,7 +26,7 @@
         <tbody>
         <tr th:each="blog:${vipBlog}">
             <td class="text-center" th:text="${blog.id}"></td>
-            <td th:text="${blog.name == null ? blog.nickName:blog.name}"></td>
+            <td th:text="${blog.name == null ? blog.nickName:blog.name}" style="white-space: nowrap"></td>
             <td th:text="${blog.title}" style="word-break: break-all"></td>
             <td th:text="${blog.content}" style="word-break: break-all"></td>
             <!--<td>-->
@@ -74,7 +74,7 @@
 </script>
 <style>
     .gallery {
-        /*width: 30px;*/
+        width: 30px;
         margin: 10px auto;
         /*padding: 5px;*/
         /*background: #333;*/
