--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -1,154 +1,190 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-   <aside class="aside" th:fragment="left">
-      <div class="aside-inner">
-         <nav class="sidebar" data-sidebar-anyclick-close="">
+<aside class="aside" th:fragment="left">
+    <div class="aside-inner">
+        <nav class="sidebar" data-sidebar-anyclick-close="">
             <ul class="nav">
-               <li class="has-user-block">
-                  <div>
-                     <div class="item user-block">
-                        <div class="user-block-picture">
-                           <div class="user-block-status">
-                              <a href="javascript:void(0);" th:onclick="'locationUrl(\'/user/'+${user.id}+'/0\',\'\');'"><!--locationUrl(\'/404\',\'\');-->
-                                 <img alt="" class="img-thumbnail img-circle"  th:src="${user.userPic == null?'img/favicon.png':user.userPic}" id="leftProfilePicture" width="240px" height="240px"/></a>
-                              <div class="circle circle-success circle-lg"></div>
-                           </div>
+                <li class="has-user-block">
+                    <div>
+                        <div class="item user-block">
+                            <div class="user-block-picture">
+                                <div class="user-block-status">
+                                    <a href="javascript:void(0);"
+                                       th:onclick="'locationUrl(\'/user/'+${user.id}+'/0\',\'\');'">
+                                        <!--locationUrl(\'/404\',\'\');-->
+                                        <img alt="" class="img-thumbnail img-circle"
+                                             th:src="${user.userPic == null?'img/favicon.png':user.userPic}"
+                                             id="leftProfilePicture" width="240px" height="240px"/></a>
+                                    <div class="circle circle-success circle-lg"></div>
+                                </div>
+                            </div>
+                            <div class="user-block-info">
+                                <div class="user-block-name" th:text="' '+${user.nickName}" id="leftUserName">欢迎 欢迎
+                                </div>
+                                <div class="user-block-role"
+                                     th:text="${user.title == null ? '暂无简介' : user.title.length() gt 10 ? user.title.substring(0,10)+'...' : user.title}"
+                                     id="leftIntroduction">暂无简介
+                                </div>
+                            </div>
                         </div>
-                        <div class="user-block-info">
-                           <div class="user-block-name" th:text="' '+${user.nickName}" id="leftUserName">欢迎 欢迎</div>
-                           <div class="user-block-role" th:text="${user.title == null ? '暂无简介' : user.title.length() gt 10 ? user.title.substring(0,10)+'...' : user.title}" id="leftIntroduction">暂无简介</div>
-                        </div>
-                     </div>
-                  </div>
-               </li>
-               <li class="nav-heading ">主导航</li>
-               <li class="" id="home">
-                  <a title="首页"  href="javascript:void(0);"  onclick="locationUrl('/standard/my/0','home')">
-                     <em class="icon-home"></em>
-                     <span>首页</span>
-                  </a>
-               </li>
-               <li class=" " id="unread">
-               </li>
-               <li class=" " >
-                  <a data-toggle="collapse" title="用户" href="#favorites">
-                     <em class="icon-folder"></em>
-                     <span>用户管理</span>
-                  </a>
-                  <ul class="nav sidebar-subnav collapse" id="favorites">
-                     <li class="sidebar-subnav-header">用户管理</li>
-                     <li id="newFavortes" class=" ">
-                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list')">
-                           <span>—  普通用户</span>
-                        </a>
-                     </li>
-                     <li id="newFavortes" class=" ">
-                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/wait')">
-                           <span>—  待认证用户</span>
-                        </a>
-                     </li>
-                     <li id="newFavortes" class=" ">
-                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/authen')">
-                           <span>—  认证用户</span>
-                        </a>
-                     </li>
-                     <li id="newFavortes" class=" ">
-                        <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/newFavorites','newFavortes')">
-                           <span>—  大咖用户</span>
-                        </a>
-                     </li>
-                  </ul>
-               </li>
-               <li class=" " >
-                  <a data-toggle="collapse" title="收藏夹" href="#weibo">
-                     <em class="icon-folder"></em>
-                     <span>微博管理</span>
-                  </a>
-                  <ul class="nav sidebar-subnav collapse" id="weibo">
-                     <li class="sidebar-subnav-header">微博管理</li>
+                    </div>
+                </li>
+                <li class="nav-heading ">主导航</li>
+                <li class="" id="home">
+                    <a title="首页" href="javascript:void(0);" onclick="locationUrl('/standard/my/0','home')">
+                        <em class="icon-home"></em>
+                        <span>首页</span>
+                    </a>
+                </li>
+                <li class=" " id="unread">
+                </li>
+                <li class=" ">
+                    <a data-toggle="collapse" title="用户" href="#favorites">
+                        <em class="icon-folder"></em>
+                        <span>用户管理</span>
+                    </a>
+                    <ul class="nav sidebar-subnav collapse" id="favorites">
+                        <li class="sidebar-subnav-header">用户管理</li>
+                        <li id="newFavortes" class=" ">
+                            <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list')">
+                                <span>—  普通用户</span>
+                            </a>
+                        </li>
+                        <li id="newFavortes" class=" ">
+                            <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/wait')">
+                                <span>—  待认证用户</span>
+                            </a>
+                        </li>
+                        <li id="newFavortes" class=" ">
+                            <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/user2/list/authen')">
+                                <span>—  认证用户</span>
+                            </a>
+                        </li>
+                        <li id="newFavortes" class=" ">
+                            <a title="+ 新建" href="javascript:void(0);"
+                               onclick="locationUrl('/newFavorites','newFavortes')">
+                                <span>—  大咖用户</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class=" ">
+                    <a data-toggle="collapse" title="收藏夹" href="#weibo">
+                        <em class="icon-folder"></em>
+                        <span>微博管理</span>
+                    </a>
+                    <ul class="nav sidebar-subnav collapse" id="weibo">
+                        <li class="sidebar-subnav-header">微博管理</li>
 
-                     <li id="weibo" class=" ">
-                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list')">
-                           <span>—  所有微博</span>
-                        </a>
-                     </li>
-                     <li id="newWeibos" class=" ">
-                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/recommend')">
-                           <span>—  推荐微博</span>
-                        </a>
-                     </li>
-                     <li id="newWeibos" class=" ">
-                        <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
-                           <span>—  大咖说</span>
-                        </a>
-                     </li>
-                  </ul>
-               </li>
-            <li class=" " >
-               <a data-toggle="collapse" title="收藏夹" href="#favorites1">
-                  <em class="icon-folder"></em>
-                  <span>病例管理</span>
-               </a>
-               <ul class="nav sidebar-subnav collapse" id="favorites1">
-                  <li class="sidebar-subnav-header">微博管理</li>
-                  <li id="newFavortes" class=" ">
-                     <a title="+ 新建" href="javascript:void(0);" onclick="locationUrl('/newFavorites','newFavortes')">
-                        <span>+ 新建</span>
-                     </a>
-                  </li>
-               </ul>
-            </li>
+                        <li id="weibo" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list')">
+                                <span>—  所有微博</span>
+                            </a>
+                        </li>
+                        <li id="newWeibos" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/recommend')">
+                                <span>—  推荐微博</span>
+                            </a>
+                        </li>
+                        <li id="newWeibos" class=" ">
+                            <a title="" href="javascript:void(0);" onclick="locationUrl('/blog/list/vip')">
+                                <span>—  大咖说</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class=" ">
+                    <a data-toggle="collapse" title="收藏夹" href="#favorites1">
+                        <em class="icon-folder"></em>
+                        <span>病例管理</span>
+                    </a>
+                    <ul class="nav sidebar-subnav collapse" id="favorites1">
+                        <li class="sidebar-subnav-header">微博管理</li>
+                        <li id="newFavortes" class=" ">
+                            <a title="+ 新建" href="javascript:void(0);"
+                               onclick="locationUrl('/newFavorites','newFavortes')">
+                                <span>+ 新建</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
 
-               <li class=" " id="explore" >
-                  <a title="发现" href="javascript:void(0);"  onclick="locationUrl('/standard/explore/0','explore')">
-                     <em class="icon-compass"></em>
-                     <span>发现</span>
-                  </a>
-               </li>
-               <li class=" " style="display: none">
-                  <a data-toggle="collapse" title="群组" href="#groups">
-                     <em class="icon-folder"></em>
-                     <span>群组</span>
-                  </a>
-                  <ul class="nav sidebar-subnav collapse" id="groups">
-                     <li class="sidebar-subnav-header">群组</li>
-                     <li class=" ">
-                        <a title="+ 新建群组" href="new_group.html">
-                           <span>+ 新建群组</span>
-                        </a>
-                     </li>
-                  </ul>
-               </li>
-               <li class="nav-heading ">更多</li>
-               <li class=" " id="tool">
-                  <a title="网页收集工具" href="javascript:void(0);" onclick="locationUrl('/tool','tool')">
-                     <em class="icon-wrench"></em>
-                     <span>网页收集工具</span>
-                  </a>
-               </li>
-       <!--         <li class=" " id="mobile">
-                  <a title="移动客户端" href="javascript:void(0);" onclick="locationUrl('/mobile','mobile')">
-                     <em class="icon-screen-smartphone"></em>
-                     <span>移动客户端</span>
-                  </a>
-               </li> -->
-               <li class=" " id="import">
-                  <a title="导入收藏夹" href="javascript:void(0);" onclick="locationUrl('/import','import')">
-                     <em class="icon-login"></em>
-                     <span>导入收藏夹</span>
-                  </a>
-               </li>
-               <li class=" " id="export">
-                  <a title="导出收藏夹" href="javascript:void(0);" onclick="locationUrl('/export','export')">
-                     <em class="icon-logout"></em>
-                     <span>导出收藏夹</span>
-                  </a>
-               </li>
+                <li class=" ">
+                    <a data-toggle="collapse" title="幻灯" href="#apps">
+                        <em class="icon-folder"></em>
+                        <span>App内容运营</span>
+                    </a>
+                    <ul class="nav sidebar-subnav collapse" id="apps">
+                        <li class="sidebar-subnav-header">App内容运营</li>
+                        <li id="activities" class=" ">
+                            <a title="+ 引导页管理" href="javascript:void(0);" onclick="locationUrl('/activities/list')">
+                                <span>—  引导页管理</span>
+                            </a>
+                        </li>
+                        <li id="weiboBanners" class=" ">
+                            <a title="+ 微博Banner" href="javascript:void(0);" onclick="locationUrl('/banner/list/weibo')">
+                                <span>—  微博Banner</span>
+                            </a>
+                        </li>
+                        <li id="meetingBanners" class=" ">
+                            <a title="+ 会议Banner" href="javascript:void(0);" onclick="locationUrl('/banner/list/meeting')">
+                                <span>—  会议Banner</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+
+
+                <li class=" " id="explore">
+                    <a title="发现" href="javascript:void(0);" onclick="locationUrl('/standard/explore/0','explore')">
+                        <em class="icon-compass"></em>
+                        <span>发现</span>
+                    </a>
+                </li>
+                <li class=" " style="display: none">
+                    <a data-toggle="collapse" title="群组" href="#groups">
+                        <em class="icon-folder"></em>
+                        <span>群组</span>
+                    </a>
+                    <ul class="nav sidebar-subnav collapse" id="groups">
+                        <li class="sidebar-subnav-header">群组</li>
+                        <li class=" ">
+                            <a title="+ 新建群组" href="new_group.html">
+                                <span>+ 新建群组</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-heading ">更多</li>
+                <li class=" " id="tool">
+                    <a title="网页收集工具" href="javascript:void(0);" onclick="locationUrl('/tool','tool')">
+                        <em class="icon-wrench"></em>
+                        <span>网页收集工具</span>
+                    </a>
+                </li>
+                <!--         <li class=" " id="mobile">
+                           <a title="移动客户端" href="javascript:void(0);" onclick="locationUrl('/mobile','mobile')">
+                              <em class="icon-screen-smartphone"></em>
+                              <span>移动客户端</span>
+                           </a>
+                        </li> -->
+                <li class=" " id="import">
+                    <a title="导入收藏夹" href="javascript:void(0);" onclick="locationUrl('/import','import')">
+                        <em class="icon-login"></em>
+                        <span>导入收藏夹</span>
+                    </a>
+                </li>
+                <li class=" " id="export">
+                    <a title="导出收藏夹" href="javascript:void(0);" onclick="locationUrl('/export','export')">
+                        <em class="icon-logout"></em>
+                        <span>导出收藏夹</span>
+                    </a>
+                </li>
             </ul>
-         </nav>
-      </div>
-   </aside>
+        </nav>
+    </div>
+</aside>
 </body>
 </html>
 
