Bootstrap表格内容居中

--- a/src/main/resources/templates/activities/activities.html
+++ b/src/main/resources/templates/activities/activities.html
@@ -12,13 +12,13 @@
         <thead>
         <div class="text-info"><b></b></div>
         <tr>
-            <th>序号</th>
-            <th>标题</th>
-            <th>内容</th>
-            <th>图片</th>
-            <th>发布时间</th>
-            <th>下线时间</th>
-            <th>操作</th>
+            <th style='vertical-align: middle;text-align: center;'>序号</th>
+            <th style='vertical-align: middle;text-align: center;'>标题</th>
+            <th style='vertical-align: middle;text-align: center;'>内容</th>
+            <th style='vertical-align: middle;text-align: center;'>图片</th>
+            <th style='vertical-align: middle;text-align: center;'>发布时间</th>
+            <th style='vertical-align: middle;text-align: center;'>下线时间</th>
+            <th style='vertical-align: middle;text-align: center;'>操作</th>
         </tr>
         </thead>
         <tbody>
