修改登陆页面

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 	 <footer th:fragment="footer">
-	    <span>&copy; 2017 - WanYi</span>
+	    <span>&copy; 2017 - ZhiYi</span>
 	    <span class="pull-right">
-	                  万怡 | 让运营更简单
+	                  医会宝 | 让运营更简单
 	    </span>
 	 </footer>
 	<div style="display:none">
