--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,13 +12,14 @@
 
             <a class="navbar-brand" href="/">
 
-               <div class="brand-logo">
+               <div class="brand-logo" style="padding: 15px 10px;">
 
-                  <img class="img-responsive" alt="App Logo" th:src="@{/img/logo.png}" height="240px" /></div>
-
+                  <!--<img class="img-responsive" alt="App Logo" th:src="@{/img/logo_small.png}" style="padding: 14px 10px;"/> 医会宝运营管理系统-->
+                <span style="padding: 14px 10px; color: rgba(255, 255, 255, 0.04);">医会宝运营管理系统</span>
+               </div>
                <div class="brand-logo-collapsed">
 
-                  <img class="img-responsive" alt="App Logo" th:src="@{/img/logo.png}" /></div>
+                  <img class="img-responsive" alt="App Logo" th:src="@{/img/logo_small.png}" /></div>
 
             </a>
 
