--- a/src/main/resources/templates/activities/activities.html
+++ b/src/main/resources/templates/activities/activities.html
@@ -49,9 +49,6 @@
         </tbody>
     </table>
 
-    <div class="aside-inner">
-        <h3></h3>
-    </div>
 
     <div class="content-wrapper">
         <h3>已下线活动</h3>
@@ -59,12 +56,12 @@
     <table class="table table-bordered table-hover">
         <thead>
         <tr>
-            <th>序号</th>
-            <th>标题</th>
-            <th>内容</th>
-            <th>图片</th>
-            <th>发布时间</th>
-            <th>下线时间</th>
+            <th style='vertical-align: middle;text-align: center;'>序号</th>
+            <th style='vertical-align: middle;text-align: center;'>标题</th>
+            <th style='vertical-align: middle;text-align: center;'>内容</th>
+            <th style='vertical-align: middle;text-align: center;'>图片</th>
+            <th style='vertical-align: middle;text-align: center;'>发布时间</th>
+            <th style='vertical-align: middle;text-align: center;'>下线时间</th>
         </tr>
         </thead>
         <tbody>
