--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,14 +12,19 @@
   <link rel="stylesheet" th:href="@{/media/css/bootstrap.css}" id="bscss"></link>
   <link rel="stylesheet" th:href="@{/media/css/app.css}" id="maincss"></link>
   <link rel="stylesheet" th:href="@{/media/css/theme-i.css}" id="maincss"></link>
+    <style>
+        body {background: url("http://ww2.sinaimg.cn/mw690/d8600879gw1fb44zd9mu6j20fo0kndh0.jpg") no-repeat center fixed;background-size:cover; -webkit-background-size: cover;}
+        /*http://ww2.sinaimg.cn/mw690/d8600879gw1fb44zd9mu6j20fo0kndh0.jpg*/
+        /*http://oimas2nso.bkt.clouddn.com/web_wechat_login_bg.jpg*/
+    </style>
  </head>
   <body>
     <div class="wrapper">
-      <div class="block-center mt-xl wd-xl">
+      <div class="block-center mt-xl wd-xl" style="margin-top: 130px !important;">
          <div class="panel panel-dark panel-flat">
-            <div class="panel-heading text-center">
+            <div class="panel-heading text-center" style="padding: 12px 15px;">
                <a href="/index">
-                  <img src="/img/logo.png" alt="Image" class="block-center img-rounded"/>
+                  <img src="/img/logo_name_big.png" alt="Image" class="block-center img-rounded" style="width: 220px; height: 24px;"/>
                </a>
             </div>
             <div class="panel-body" id="loginPage">
@@ -65,13 +70,13 @@
                <!--<a href="/register" class="btn btn-block btn-default">现在就注册</a>-->
             </div>
          </div>
-         <div class="p-lg text-center">
-            <span>&copy;</span>
-            <span>2017</span>
-            <span>-</span>
-            <span>YiHuiBao</span>
+         <div class="p-lg text-center" style="padding: 25px !important;">
+            <span style="color: #FFFFFF;">&copy;</span>
+            <span style="color: #FFFFFF;">2017</span>
+            <span style="color: #FFFFFF;">-</span>
+            <span style="color: #FFFFFF;">YiHuiBao</span>
             <br/>
-            <span>songlinLuo@healife.com</span>
+            <span style="color: #FFFFFF;">songlinLuo@healife.com</span>
          </div>
       </div>
    </div>
