--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,13 +13,12 @@
             <a class="navbar-brand" href="/">
 
                <div class="brand-logo" style="padding: 15px 10px;">
-
                   <!--<img class="img-responsive" alt="App Logo" th:src="@{/img/logo_small.png}" style="padding: 14px 10px;"/> 医会宝运营管理系统-->
-                <span style="padding: 14px 10px; color: rgba(255, 255, 255, 0.04);">医会宝运营管理系统</span>
+                  <span style="padding: 14px 10px; color: #fffff0;">医会宝运营管理系统</span>
                </div>
                <div class="brand-logo-collapsed">
-
-                  <img class="img-responsive" alt="App Logo" th:src="@{/img/logo_small.png}" /></div>
+                  <img class="img-responsive" alt="App Logo" th:src="@{/img/logo_small.png}" style="padding: 14px 10px;"/>
+               </div>
 
             </a>
 
