--- a/src/main/resources/templates/fragments/left.html
+++ b/src/main/resources/templates/fragments/left.html
@@ -144,7 +144,7 @@
                         <span>发现</span>
                     </a>
                 </li>
-                <li class=" " style="display: none">
+                <!--<li class=" " style="display: none">
                     <a data-toggle="collapse" title="群组" href="#groups">
                         <em class="icon-folder"></em>
                         <span>群组</span>
@@ -182,7 +182,7 @@
                         <em class="icon-logout"></em>
                         <span>导出收藏夹</span>
                     </a>
-                </li>
+                </li>-->
             </ul>
         </nav>
     </div>
