--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -165,7 +165,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>我们做了一个可以在线随时随地简单运营的一个网站
+                    <p>我们做了一个可以在线随时随地简单运营的网站
                     <!--<br/>可以在这个网站上分类整理收藏的网站或者文章，也可以查看别人都收藏了些什么。-->
                     <!--<br/>可以从浏览器收藏夹导入到我们的网站，也可以从我们的网站导出去做备份。-->
                     <!--<br/>根据共同的收藏可以找出我们相互兴趣的人。-->
@@ -277,7 +277,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; WanYi 2017
+                        Copyright &copy; Zhiyi (Shanghai) network technology co., LTD 2017
                     </div>
                 </div>
             </div>
