--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -21,6 +21,7 @@
             <th>评论数</th>
             <th>点赞数</th>
             <th>是否热门</th>
+            <th>操作</th>
         </tr>
        </thead>
        <tbody>
@@ -59,6 +60,13 @@
             <td th:text="${blog.commentCount}"></td>
             <td th:text="${blog.likeCount}"></td>
             <td th:text="${blog.isHot == 1? '是':'否'}"></td>
+            <td>
+                <div class="p-lg text-center">
+                    <a class="btn btn-default btn-block" data-target="#modal-delete-blog" data-toggle="modal" href="#">
+                        <strong>删除</strong>
+                    </a>
+                </div>
+            </td>
 
         </tr>
       </tbody>
