--- a/src/main/resources/templates/blog/blog.html
+++ b/src/main/resources/templates/blog/blog.html
@@ -11,17 +11,17 @@
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
-            <th>序号</th>
-            <th>用户名(或昵称)</th>
-            <th>标题</th>
-            <th>内容</th>
+            <th style='vertical-align: middle;text-align: center;'>序号</th>
+            <th style='vertical-align: middle;text-align: center;'>用户名(或昵称)</th>
+            <th style='vertical-align: middle;text-align: center;'>标题</th>
+            <th style='vertical-align: middle;text-align: center;'>内容</th>
             <!--<th>图片test</th>-->
-            <th>图片</th>
-            <th>发布时间</th>
-            <th>评论数</th>
-            <th>点赞数</th>
-            <th>是否热门</th>
-            <th>操作</th>
+            <th style='vertical-align: middle;text-align: center;'>图片</th>
+            <th style='vertical-align: middle;text-align: center;'>发布时间</th>
+            <th style='vertical-align: middle;text-align: center;'>评论数</th>
+            <th style='vertical-align: middle;text-align: center;'>点赞数</th>
+            <th style='vertical-align: middle;text-align: center;'>是否热门</th>
+            <th style='vertical-align: middle;text-align: center;'>操作</th>
         </tr>
        </thead>
        <tbody>
