--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -8,27 +8,27 @@
     <table class="table table-bordered table-hover">
         <thead>
         <tr>
-            <th>序号</th>
-            <th>用户名</th>
-            <th>昵称</th>
-            <th>公司/单位</th>
-            <th>部门/科室</th>
-            <th>职位</th>
-            <th>所在医院</th>
-            <th>邮箱</th>
-            <th>手机号</th>
+            <th style='vertical-align: middle;text-align: center;'>序号</th>
+            <th style='vertical-align: middle;text-align: center;'>用户名</th>
+            <th style='vertical-align: middle;text-align: center;'>昵称</th>
+            <th style='vertical-align: middle;text-align: center;'>公司/单位</th>
+            <th style='vertical-align: middle;text-align: center;'>部门/科室</th>
+            <th style='vertical-align: middle;text-align: center;'>职位</th>
+            <th style='vertical-align: middle;text-align: center;'>所在医院</th>
+            <th style='vertical-align: middle;text-align: center;'>邮箱</th>
+            <th style='vertical-align: middle;text-align: center;'>手机号</th>
             <!--<th>注册时间</th>-->
-            <th>头像</th>
+            <th style='vertical-align: middle;text-align: center;'>头像</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="user:${user}">
-            <td th:text="${user.id}"></td>
+            <td th:text="${user.id}" style='vertical-align: middle;text-align: center;'></td>
             <td th:text="${user.name}" style="white-space: nowrap"></td>
             <td th:text="${user.nickName}" style="white-space: nowrap"></td>
             <td th:text="${user.company}" style="white-space: nowrap"></td>
             <td th:text="${user.department}" style="white-space: nowrap"></td>
-            <td th:text="${user.postion}" style="white-space: nowrap"></td>
+            <td th:text="${user.postion}" style="vertical-align: middle;text-align: center;white-space: nowrap"></td>
             <td th:text="${user.hospital}" style="white-space: nowrap"></td>
             <td th:text="${user.email}" style="white-space: nowrap"></td>
             <td th:text="${user.mobilePhone}" style="white-space: nowrap"></td>
