--- a/src/main/resources/templates/user/uploadheadportrait.html
+++ b/src/main/resources/templates/user/uploadheadportrait.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" th:href="@{/vendor/cropper/cropper.min.css}" />
          <div class="content-wrapper">
             <h3>
-               	上传头像
+               	上传头像(该功能尚未完善)
                <small>选择一个心仪的头像代表自己</small>
             </h3>
             <div class="container-fluid">
