--- a/src/main/resources/templates/fragments/collect.html
+++ b/src/main/resources/templates/fragments/collect.html
@@ -52,7 +52,7 @@
                <p class="text-center">或者</p>
                <input type="text" id="newFavorites" name="newFavorites" class="mb form-control" placeholder="新建分类收藏夹"/>
                <button id="ccollect" class="mt-lg btn btn-primary btn-block">提交</button>
-               <input type="hidden" name="id" id="ccollectId" value=""/>
+               <input type="hidden" name="id" id="collectId" value=""/>
                <input type="hidden" id="userCheck" value=""/>
                <input type="hidden" name="url" id="curl" value=""/>
                </form>
