--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -37,6 +37,7 @@
 	<script th:src="@{/js/layout.js}" ></script>
 	<script th:src="@{/js/collect.js}" ></script>
 	<script th:src="@{/js/comm.js}" ></script>
+    <script th:src="@{/js/user.js}"></script>
     <script th:src="@{vendor/parsleyjs/dist/parsley.min.js}"></script>
 	<script th:src="@{/vendor/toastr/toastr.min.js}"></script>  	
 	<script th:inline="javascript">
